--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Josh Aney</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="index.html">About Me</a></li>
             <li><a href="personal_projects.html">Personal Projects</a></li>
-            <li><a href="../images/resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="images/resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </nav>
 </header>
@@ -21,7 +21,7 @@
 <main>
     <div class="container">
         <section class="profile">
-            <img src="../images/profile_image.jpg" alt="Profile Picture">
+            <img src="images/profile_image.jpg" alt="Profile Picture">
             <h1>Josh Aney</h1>
             <p><strong>Education:</strong> Montana State University</p>
             <p><strong>Major:</strong> Computer Science</p>
