--- a/personal_projects.html
+++ b/personal_projects.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Projects - Josh Aney</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<script src="../js/slideshow.js"></script>
+<script src="js/slideshow.js"></script>
 
 <header>
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
             <li><a href="personal_projects.html">Personal Projects</a></li>
-            <li><a href="../images/resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="images/resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </nav>
 </header>
@@ -73,11 +73,11 @@
             <div class="slideshow-container ml_1">
 
                 <div class="mySlides fade" data-caption="Original Data Averages">
-                    <img src="../images/ml_1/original_data_avgs.svg" class="slideshow-img">
+                    <img src="images/ml_1/original_data_avgs.svg" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Noisy Data Averages">
-                    <img src="../images/ml_1/noisy_data_avgs.svg" class="slideshow-img">
+                    <img src="images/ml_1/noisy_data_avgs.svg" class="slideshow-img">
                 </div>
 
                 <div style="padding-top: 20px">
@@ -89,7 +89,7 @@
             </div>
             <br>
 
-            <p>The full results from this experiment can be found <a href="../images/ml_1/ml_paper_1.pdf" target="_blank">here</a></p>
+            <p>The full results from this experiment can be found <a href="images/ml_1/ml_paper_1.pdf" target="_blank">here</a></p>
         </section>
     </div>
 
@@ -126,27 +126,27 @@
             <div class="slideshow-container ml_2">
 
                 <div class="mySlides fade" data-caption="Breast Cancer Dataset Performance">
-                    <img src="../images/ml_2/BreastCancerBarPlot.png" class="slideshow-img">
+                    <img src="images/ml_2/BreastCancerBarPlot.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Soybean (small) Dataset Performance">
-                    <img src="../images/ml_2/SoyBarPlot.png" class="slideshow-img">
+                    <img src="images/ml_2/SoyBarPlot.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Glass Dataset Performance">
-                    <img src="../images/ml_2/GlassBarPlot.png" class="slideshow-img">
+                    <img src="images/ml_2/GlassBarPlot.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Abalone Dataset Performance">
-                    <img src="../images/ml_2/AbaloneBarPlot.png" class="slideshow-img">
+                    <img src="images/ml_2/AbaloneBarPlot.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Computer Hardware Dataset Performance">
-                    <img src="../images/ml_2/HardwareBarPlot.png" class="slideshow-img">
+                    <img src="images/ml_2/HardwareBarPlot.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Forest Fire Dataset Performance">
-                    <img src="../images/ml_2/ForestBarPlot.png" class="slideshow-img">
+                    <img src="images/ml_2/ForestBarPlot.png" class="slideshow-img">
                 </div>
 
                 <div style="padding-top: 20px">
@@ -158,7 +158,7 @@
             </div>
             <br>
 
-            <p>The full results from this experiment can be found <a href="../images/ml_2/ml_paper_2.pdf" target="_blank">here</a></p>
+            <p>The full results from this experiment can be found <a href="images/ml_2/ml_paper_2.pdf" target="_blank">here</a></p>
         </section>
     </div>
 
@@ -187,27 +187,27 @@
             <div class="slideshow-container ml_3">
 
                 <div class="mySlides fade" data-caption="Breast Cancer Dataset Performance">
-                    <img src="../images/ml_3/breast_bar.svg" class="slideshow-img">
+                    <img src="images/ml_3/breast_bar.svg" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Soybean (small) Dataset Performance">
-                    <img src="../images/ml_3/soy_bar.svg" class="slideshow-img">
+                    <img src="images/ml_3/soy_bar.svg" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Glass Dataset Performance">
-                    <img src="../images/ml_3/glass_bar.svg" class="slideshow-img">
+                    <img src="images/ml_3/glass_bar.svg" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Abalone Dataset Performance">
-                    <img src="../images/ml_3/abalone_bar.svg" class="slideshow-img">
+                    <img src="images/ml_3/abalone_bar.svg" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Computer Hardware Dataset Performance">
-                    <img src="../images/ml_3/machine_bar.svg" class="slideshow-img">
+                    <img src="images/ml_3/machine_bar.svg" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Forest Fire Dataset Performance">
-                    <img src="../images/ml_3/forest_bar.svg" class="slideshow-img">
+                    <img src="images/ml_3/forest_bar.svg" class="slideshow-img">
                 </div>
 
                 <div style="padding-top: 20px">
@@ -218,7 +218,7 @@
 
             </div>
 
-            <p>The full results from this experiment can be found <a href="../images/ml_3/ml_paper_3.pdf" target="_blank">here</a></p>
+            <p>The full results from this experiment can be found <a href="images/ml_3/ml_paper_3.pdf" target="_blank">here</a></p>
         </section>
     </div>
 
@@ -245,27 +245,27 @@
             <div class="slideshow-container ml_4">
 
                 <div class="mySlides fade" data-caption="Breast Cancer Dataset Performance">
-                    <img src="../images/ml_4/BreastCancerAccuracy.png" class="slideshow-img">
+                    <img src="images/ml_4/BreastCancerAccuracy.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Soybean (small) Dataset Performance">
-                    <img src="../images/ml_4/SoyAccuracy.png" class="slideshow-img">
+                    <img src="images/ml_4/SoyAccuracy.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Glass Dataset Performance">
-                    <img src="../images/ml_4/GlassAccuracy.png" class="slideshow-img">
+                    <img src="images/ml_4/GlassAccuracy.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Abalone Dataset Performance">
-                    <img src="../images/ml_4/AbaloneMSE.png" class="slideshow-img">
+                    <img src="images/ml_4/AbaloneMSE.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Computer Hardware Dataset Performance">
-                    <img src="../images/ml_4/MachineMSE.png" class="slideshow-img">
+                    <img src="images/ml_4/MachineMSE.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Forest Fire Dataset Performance">
-                    <img src="../images/ml_4/ForestMSE.png" class="slideshow-img">
+                    <img src="images/ml_4/ForestMSE.png" class="slideshow-img">
                 </div>
 
                 <div style="padding-top: 20px">
@@ -276,7 +276,7 @@
 
             </div>
 
-            <p>The full results from this experiment can be found <a href="../images/ml_4/ml_paper_4.pdf" target="_blank">here</a></p>
+            <p>The full results from this experiment can be found <a href="images/ml_4/ml_paper_4.pdf" target="_blank">here</a></p>
         </section>
     </div>
 
@@ -292,19 +292,19 @@
             <div class="slideshow-container bike_webapp">
 
                 <div class="mySlides fade" data-caption="Website Homepage">
-                    <img src="../images/bike_webapp/home_page.png" class="slideshow-img">
+                    <img src="images/bike_webapp/home_page.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Adding Trails">
-                    <img src="../images/bike_webapp/add_trail.png" class="slideshow-img">
+                    <img src="images/bike_webapp/add_trail.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Trail Search">
-                    <img src="../images/bike_webapp/trail_search.png" class="slideshow-img">
+                    <img src="images/bike_webapp/trail_search.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Trail Map">
-                    <img src="../images/bike_webapp/trail_map.png" class="slideshow-img">
+                    <img src="images/bike_webapp/trail_map.png" class="slideshow-img">
                 </div>
 
                 <div style="padding-top: 20px">
@@ -334,11 +334,11 @@
             <div class="slideshow-container unity">
 
                 <div class="mySlides fade" data-caption="Unity UI">
-                    <img src="../images/roll_a_ball/ui.png" class="slideshow-img">
+                    <img src="images/roll_a_ball/ui.png" class="slideshow-img">
                 </div>
 
                 <div class="mySlides fade" data-caption="Roll A Ball gameplay">
-                    <img src="../images/roll_a_ball/gameplay.png" class="slideshow-img">
+                    <img src="images/roll_a_ball/gameplay.png" class="slideshow-img">
                 </div>
 
                 <div style="padding-top: 20px">
