update link configuration

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <div class="container">
         <section class="profile">
             <img src="images/profile_image.jpg" alt="Profile Picture">
+            <br>
             <h1>Josh Aney</h1>
             <p><strong>Education:</strong> Montana State University</p>
             <p><strong>Major:</strong> Computer Science</p>
             <p><strong>Location:</strong> Bozeman, MT</p>
-            <p><strong>Links: </strong></p>
-            <div class="links">
-                <a href="mailto:josh.aney@icloud.com">Email</a>
-                <a href="https://github.com/joshaney324">GitHub</a>
+            <p><strong>Links: </strong>
+                <a href="mailto:josh.aney@icloud.com">Email</a> |
+                <a href="https://github.com/joshaney324">GitHub</a> |
                 <a href="https://www.linkedin.com/in/josh-aney-67801528b">LinkedIn</a>
-            </div>
+            </p>
         </section>
 
         <section class="bio">
