--- a/personal_projects.html
+++ b/personal_projects.html
@@ -67,6 +67,9 @@
                 artificial noise to the datasets. This was done by selecting one feature in the dataset at random and
                 then mixing up the order of that given attribute. We then performed the experiment one more time to test
                 how our Naive Bayes model performed with more noise.</p>
+            <br>
+            <p>The full design document for this project can be found <a href="images/ml_1/Project%201%20Design%20Document.pdf" target="_blank">here</a>.</p>
+            <br>
             <p><strong>Results:</strong> Our Naive Bayes model performed well on all the datasets with a slight decrease in performance with the simulated noise.</p>
 
 
@@ -118,6 +121,9 @@
                 performed the experiment one more time, but instead of using edited KNN models to find the edited dataset,
                 we used the centroids from a K-Means Clustering model. Once these experiments were completed, we then
                 analyzed and compared the results from all the different models</p>
+            <br>
+            <p>The full design document for this project can be found <a href="images/ml_2/Project%202%20Design%20Document.pdf" target="_blank">here</a>.</p>
+            <br>
             <p><strong>Results</strong>: Many of the K Nearest Neighbors Methods performed better on classification data then on regression data.
                 The performance of individual models depended on the structure of each dataset. Depending on if the dataset
                 contained large amounts of outliers, the K-Means model or the edited model would perform better.</p>
@@ -180,6 +186,9 @@
                 same manner as it was done in the KNN methods project with a hold-out fold. An experiment was then conducted to analyze the performance of our neural network with varying network
                 sizes and varying amounts of hidden layers on each dataset. Each dataset was tested by completing 10-fold
                 cross validation excluding the hold out fold's data points. These results were then analyzed for each dataset.</p>
+            <br>
+            <p>The full design document for this project can be found <a href="images/ml_3/Project%203%20Design%20Document.pdf" target="_blank">here</a>.</p>
+            <br>
             <p><strong>Results</strong>: The neural network tended to perform better with zero or one hidden layer,
                 compared to two hidden layers. On the more complex datasets, the network may perform better with one
                 hidden layer, but it rarely performed best with two hidden layers.</p>
@@ -239,6 +248,9 @@
                 swarm optimization. Because of the complexity of these algorithms and the computational power needed,
                 we only tuned a small amount of the available hyperparameters. Once again we performed 10-fold cross
                 validation on all the datasets and then compared the results across all the training methods.</p>
+            <br>
+            <p>The full design document for this project can be found <a href="images/ml_4/ML%20Project%204%20Design%20Doc.pdf" target="_blank">here</a>.</p>
+            <br>
             <p><strong>Results</strong>: The performance of the models was really variable. Datasets that tended to
                 overfit with backpropagation would often perform better with population based methods and datasets that
                 were relatively simple would often perform drastically better with backpropagation.</p>
