--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Josh Aney</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
@@ -26,11 +27,11 @@
             <h1>Josh Aney</h1>
             <p><strong>Education:</strong> Montana State University</p>
             <p><strong>Major:</strong> Computer Science</p>
-            <p><strong>Location:</strong> Bozeman, MT</p>
-            <p><strong>Links: </strong>
-                <a href="mailto:josh.aney@icloud.com">Email</a> |
-                <a href="https://github.com/joshaney324">GitHub</a> |
-                <a href="https://www.linkedin.com/in/josh-aney-67801528b">LinkedIn</a>
+            <p><strong>Email: </strong><a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a></p>
+            <p><strong>Phone: </strong><a href="tel:+5075130517">(507)-513-0517</a></p>
+            <p>
+                <a href="https://github.com/joshaney324"><i class="fab fa-github fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/josh-aney-67801528b"><i class="fab fa-linkedin fa-2x"></i></a>
             </p>
         </section>
 
