Update Personal Projects

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -42,14 +42,66 @@
 
     <div class="project-list">
         <ul>
-            <li><strong>Project 1: </strong><a href="#ml_1">Naive Bayes Model From Scratch</a></li>
-            <li><strong>Project 2: </strong><a href="#ml_2">K-Nearest-Neighbors Methods From Scratch</a></li>
-            <li><strong>Project 3: </strong><a href="#ml_3">Neural Network From Scratch</a></li>
-            <li><strong>Project 4: </strong><a href="#ml_4">Experimenting With Different Neural Network Training Methods (Backpropagation and Population Based Methods)</a></li>
-            <li><strong>Project 5: </strong><a href="#bike-webapp">Bozeman Bike Trails Web Application</a></li>
-            <li><strong>Project 6: </strong><a href="#unity">Unity Project</a></li>
+            <li>
+                <strong>Project 1:</strong> <a href="#ml_1">Naive Bayes Model From Scratch</a>
+                <ul>
+                    <li>Python, UML, Numpy</li>
+                    <li>Probability Theory</li>
+                    <li>Data Preprocessing: Data Imputation, Binning</li>
+                    <li>Technical Writing</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Project 2:</strong> <a href="#ml_2">K-Nearest-Neighbors Methods From Scratch</a>
+                <ul>
+                    <li>Python, UML, Numpy</li>
+                    <li>Data Preprocessing: Data Imputation, One-Hot Encoding, Data Normalization</li>
+                    <li>K-Nearest-Neighbors Classification and Regression</li>
+                    <li>Edited K-Nearest-Neighbors Classification and Regression</li>
+                    <li>K-Means Clustering</li>
+                    <li>Technical Writing</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Project 3:</strong> <a href="#ml_3">Neural Network From Scratch</a>
+                <ul>
+                    <li>Python, UML, NumPy</li>
+                    <li>Data Preprocessing: Data Imputation, One-Hot Encoding, Data Normalization</li>
+                    <li>Backpropagation</li>
+                    <li>Technical Writing</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Project 4:</strong> <a href="#ml_4">Experimenting With Neural Network Training Methods</a>
+                <ul>
+                    <li>Python, UML, NumPy</li>
+                    <li>Data Preprocessing: Data Imputation, One-Hot Encoding, Data Normalization</li>
+                    <li>Backpropagation</li>
+                    <li>Genetic Algorithm</li>
+                    <li>Particle Swarm Optimization</li>
+                    <li>Technical Writing</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Project 5:</strong> <a href="#bike-webapp">Bozeman Bike Trails Web Application</a>
+                <ul>
+                    <li>C#, HTML, CSS, SQL</li>
+                    <li>ASP.NET Core</li>
+                    <li>Entity Framework Core</li>
+                    <li>Mapbox, GPX Parsing</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Project 6:</strong> <a href="#unity">Unity Project</a>
+                <ul>
+                    <li>C#</li>
+                    <li>Unity Physics</li>
+                    <li>Animation and UI Design</li>
+                </ul>
+            </li>
         </ul>
     </div>
+
 
     <div id="ml_1" class="container">
         <section class="project">
@@ -307,6 +359,10 @@
                     <img src="images/bike_webapp/home_page.png" class="slideshow-img">
                 </div>
 
+                <div class="mySlides fade" data-caption="Login Page">
+                    <img src="images/bike_webapp/login_page.png" class="slideshow-img">
+                </div>
+
                 <div class="mySlides fade" data-caption="Adding Trails">
                     <img src="images/bike_webapp/add_trail.png" class="slideshow-img">
                 </div>
@@ -326,7 +382,7 @@
                 </div>
             </div>
 
-            <p><strong>Technologies</strong>: This website is built off of Microsoft's .net framework. It uses razor pages to build the
+            <p><strong>Technologies</strong>: This website is built off ASP .NET Core. It uses razor pages to build the
                 structure of the website.</p>
             <p><strong>Future Additions</strong>: Eventually I would like to functionality for multiple users so that
                 individual users would be able to have their own trails logged as well as not having a public database.
