Update Projects and Professional Experience

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 code a few common machine learning algorithms from scratch, and it truly gave me a new perspective of
                 why math is so important in my everyday life.</p>
             <h2>Professional Experience</h2>
-            <p>During the 2024 summer I got the opportunity to work with the CaMP (Cybernetics and Motor Physiology) lab
+            <p>I am currently working with the CaMP (Cybernetics and Motor Physiology) lab
                 at Mayo Clinic. I worked with Dr. Kai Miller on a research project that involved me analyzing voltage
                 traces from the brain with different machine learning techniques. This experience taught be a lot about
                 how to handle real world challenges that could be faced when working in the machine learning field. I
