--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 getting out into the mountains to ski or bike. I live for any sort of adventures that will get me outside</p>
             <h2>Academic Interests</h2>
             <p>In school, I have grown to be very interested in the world of machine learning. I enjoy working with a
-                group of my peers to solve a problem that is given to us. Working in a group gives me a chance bounce ideas
+                group of my peers to solve a problem that is given to us. Working in a group gives me a chance to bounce ideas
                 off of other people to allow me to find new ways to manipulate a dataset or approach a certain challenge.
                 I also love getting to work with the math involved in many of these problems. I had the opportunity to
                 code a few common machine learning algorithms from scratch, and it truly gave me a new perspective of
@@ -54,7 +54,7 @@
             <h2>Professional Experience</h2>
             <p>I am currently working with the CaMP (Cybernetics and Motor Physiology) lab
                 at Mayo Clinic. I worked with Dr. Kai Miller on a research project that involved me analyzing voltage
-                traces from the brain with different machine learning techniques. This experience taught be a lot about
+                traces from the brain with different machine learning techniques. This experience taught me a lot about
                 how to handle real world challenges that could be faced when working in the machine learning field. I
                 often had to work with small datasets that would have missing values or noisy data. This caused me to be
                 very conscious on how I trained the models and how I chose which models to use.</p>
