Change personal projects to have own html files and make cards for personal projects page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
             <img src="images/profile_image.jpg" alt="Profile Picture">
             <br>
             <h1>Josh Aney</h1>
-            <p><strong>Education:</strong> Montana State University</p>
-            <p><strong>Major:</strong> Computer Science</p>
-            <p><strong>Email: </strong><a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a></p>
-            <p><strong>Phone: </strong><a href="tel:+5075130517">(507)-513-0517</a></p>
+            <div style="text-align: left;">
+                <p><strong>Education:</strong> Montana State University</p>
+                <p><strong>Major:</strong> Computer Science</p>
+                <p><strong>Email: </strong><a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a></p>
+                <p><strong>Phone: </strong><a href="tel:+5075130517">(507)-513-0517</a></p>
+            </div>
             <p>
                 <a href="https://github.com/joshaney324"><i class="fab fa-github fa-2x"></i></a>
                 <a href="https://www.linkedin.com/in/josh-aney-67801528b"><i class="fab fa-linkedin fa-2x"></i></a>
